--- a/devices.cfg
+++ b/devices.cfg
@@ -1,3 +1,10 @@
+# Redmi 2
+[wt88047]
+author = "Keertesh"
+version = "1.0"
+arch = arm
+devicenames = wt88047
+
 # ZTE Axon 7
 [ailsa_ii]
 author = "jcadduono"
