--- a/devices.cfg
+++ b/devices.cfg
@@ -1,7 +1,8 @@
 # Redmi 2
 [wt88047]
 author = "Keertesh"
-version = "1.0"
+version = "7.1.2"
+kernelstring ='Immune™'
 arch = arm
 devicenames = wt88047
 
