--- a/devices.cfg
+++ b/devices.cfg
@@ -4,7 +4,7 @@ author = "Keertesh"
 version = "7.1.2"
 kernelstring ='Immune™'
 arch = arm
-devicenames = wt88047
+devicenames = 
 
 # ZTE Axon 7
 [ailsa_ii]
