--- a/devices.cfg
+++ b/devices.cfg
@@ -1,3 +1,10 @@
+# Moto G5S Plus
+[sanders]
+author = "Keertesh"
+version = "7.1.1"
+kernelstring ='Arsenic Kernel'
+devicenames = 
+
 # Redmi 2
 [wt88047]
 author = "Keertesh"
